use jvmDowngrader