@@ -109,7 +109,7 @@ public class OpenGuideHotkey {
             return;
         }
 
-        var found = guidebookPages.get(0);
+        var found = guidebookPages.getFirst();
 
         var current = GuideScreen.current();
         if (current != null && found.page.pageId()
@@ -138,7 +138,7 @@ public class OpenGuideHotkey {
             return false;
         }
 
-        var found = pages.get(0);
+        var found = pages.getFirst();
         var current = GuideScreen.current();
         if (current != null && found.page.pageId()
             .equals(current.getCurrentPageId())) {
@@ -180,10 +180,10 @@ public class OpenGuideHotkey {
 
         var sb = new StringBuilder();
         sb.append(EnumChatFormatting.GRAY);
-        for (int i = 0; i < filled; i++) sb.append('|');
+        sb.append("|".repeat(filled));
         if (filled < totalChars) {
             sb.append(EnumChatFormatting.DARK_GRAY);
-            for (int i = 0; i < totalChars - filled; i++) sb.append('|');
+            sb.append("|".repeat(totalChars - filled));
         }
         return sb.toString();
     }
@@ -222,8 +222,7 @@ public class OpenGuideHotkey {
         if (holding) {
             if (ticksKeyHeld < TICKS_TO_OPEN && ++ticksKeyHeld == TICKS_TO_OPEN) {
                 if (!guidebookPages.isEmpty()) {
-                    var found = guidebookPages.get(0);
-                    var mc = Minecraft.getMinecraft();
+                    var found = guidebookPages.getFirst();
                     List<PageAnchor> allPages = found.guide.getIndex(ItemMultiIndex.class)
                         .findAllByStack(stack);
                     PageAnchor target = allPages.size() > 1 ? GuideItemLinksPage.anchorForStack(stack) : found.page;
@@ -299,7 +298,7 @@ public class OpenGuideHotkey {
         boolean held = isKeyHeld();
         if (held) {
             if (questTicksKeyHeld < TICKS_TO_OPEN && ++questTicksKeyHeld == TICKS_TO_OPEN) {
-                var found = questGuidebookPages.get(0);
+                var found = questGuidebookPages.getFirst();
                 var mc = Minecraft.getMinecraft();
                 if (mc.currentScreen instanceof GuideUiHost) {
                     ((GuideUiHost) mc.currentScreen).navigateTo(found.guide.getId(), found.page);
