@@ -224,7 +224,7 @@ public class GuideSearch implements AutoCloseable {
 
     public List<SearchResult> searchGuide(String queryText, @Nullable Guide onlyFromGuide) {
         if (queryText.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         if (!pendingTasks.isEmpty()) {
@@ -240,7 +240,7 @@ public class GuideSearch implements AutoCloseable {
         } catch (Exception e) {
             FMLLog.getLogger()
                 .debug("[GuideNH] [GuideSearch] Failed to parse search query: '{}'", queryText, e);
-            return Collections.emptyList();
+            return List.of();
         }
 
         // Add an exact guide filter without changing the parsed query.
@@ -265,7 +265,7 @@ public class GuideSearch implements AutoCloseable {
         } catch (IOException e) {
             FMLLog.getLogger()
                 .error("[GuideNH] [GuideSearch] Failed to search for '{}'", queryText, e);
-            return Collections.emptyList();
+            return List.of();
         }
 
         var result = new ArrayList<SearchResult>(topDocs.scoreDocs.length);
